# positional-boolean-search

./: .gitignore  CMakeLists.txt  README.md  build.sh
include/: defs.hpp  doc_preprocessor.hpp  file_manager.hpp  parser.hpp  query_processor.hpp  tokenizer.hpp  util.hpp
report/: report.tex
src/: doc_preprocessor.cpp  file_manager.cpp  main_indexer.cpp  main_searcher.cpp  parser.cpp  query_processor.cpp  tokenizer.cpp  util.cpp
